[gd_scene load_steps=4 format=3 uid="uid://wes4tlqamtax"]

[ext_resource type="Script" path="res://terrain_objects/SwayObj.gd" id="1_vj0n3"]

[sub_resource type="Animation" id="Animation_ou1wb"]
resource_name = "sway"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_imixx"]
_data = {
"sway": SubResource("Animation_ou1wb")
}

[node name="SwayObj" type="StaticBody2D"]
script = ExtResource("1_vj0n3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_imixx")
}

[node name="InertSprite" type="Sprite2D" parent="."]

[node name="SwaySprite" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
